Better edges restrictions and new test cases